# openclew

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  UPGRADING.md  package.json
.githooks/: pre-commit
commands/: oc-checkout.md  oc-init.md  oc-peek.md  oc-search.md  oc-status.md  oc-todo.md
doc/: _FORMAT.md  _INDEX.md
doc/log/: 2026-03-29_tier1-recursive-scan-index-independence.md  2026-03-31_css-preview-div-wrappers.md  2026-03-31_dogfooding-doc-migration-plan.md  2026-04-10_release-oc-0-7-0.md  2026-04-17_oc-todo-skill.md  2026-04-27_todo-entry-exit-context.md
doc/ref/: FORMAT.md  INIT.md  RELEASE.md
examples/with-claudemd/: CLAUDE.md
hooks/: generate-index.py
lib/: checkout.js  config.js  detect.js  index-gen.js  init.js  inject.js  mcp-server.js  migrate.js  new-doc.js  new-log.js  new-todo.js  peek.js  search.js  session-header.js  status.js  templates.js  update-notifier.js
prompts/: oc-checkout.prompt.md  oc-init.prompt.md  oc-peek.prompt.md  oc-search.prompt.md  oc-status.prompt.md
rust/: Cargo.toml
rust/src/: config.rs  detect.rs  inject.rs  main.rs  util.rs
rust/src/cmd/: index.rs  init.rs  mcp.rs  mod.rs
rust/src/parse/: collect.rs  l1.rs  metadata.rs  mod.rs  search.rs
rust/src/template/: guide.rs  inject_block.rs  log.rs  mod.rs  refdoc.rs  refs.rs
scripts/: bump.sh  check_version_sync.sh  qa.py
skills/oc-checkpoint/: SKILL.md
templates/: FORMAT.md  living.md  log.md  openclew-preview.css  ref.md  refdoc.md  todo.md
test/: inject.test.js  search.test.js  templates.test.js
(+15 files in other folders)
