[package]
name = "openclew"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Long Life Memory for LLMs — structured project knowledge for AI agents and humans"
authors = ["Raphaël Flambard <raphael@ralpha.fr>"]
repository = "https://github.com/openclew/openclew"
homepage = "https://github.com/openclew/openclew#readme"
keywords = ["ai", "llm", "documentation", "knowledge", "memory"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
